--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,7 @@
-Flask==2.2.5
-environs==7.3.1
-flask-marshmallow==0.15.0
-flask-sqlalchemy==3.0.3
-marshmallow-sqlalchemy==0.29.0
+flask
+flask-sqlalchemy
+flask-bcrypt
+python-dotenv
+flask-session
+redis
+flask-cors
