add requests to frontend
Signed-off-by: brunopecampos <brunopecampos@protonmail.com>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,5 +27,13 @@ services:
     volumes:
       - "./backend:/app"
 
+  adminer:
+    image: adminer
+    restart: always
+    ports:
+      - 8000:8080
+    networks:
+      - mynetwork
+
 networks:
   mynetwork:
